# assemble

./: Cargo.toml  package-lock.json  package.json
dnas/assemble/workdir/: dna.yaml
tests/: package.json
tests/src/assemble/assemble/: commitment.test.ts  fulfillment.test.ts  offer.test.ts  promise.test.ts
ui/: .gitignore  index.html  package.json  tsconfig.tsbuildinfo
ui/out-tsc/: holochain-app.js  holochain-app.js.map
ui/out-tsc/assemble/assemble/: all-offers.js  all-offers.js.map  commitment-detail.js  commitment-detail.js.map  commitment-for-offer.js  commitment-for-offer.js.map  commitment.js.map  create-commitment.js  create-commitment.js.map  create-fulfillment.js  create-fulfillment.js.map  create-offer.js  create-offer.js.map  fulfillment-detail.js  fulfillment-detail.js.map  fulfillment-for-commitment.js  fulfillment-for-commitment.js.map  fulfillment-for-promise.js  fulfillment-for-promise.js.map  fulfillment.js  fulfillment.js.map  offer-detail.js  offer-detail.js.map  offer.js  offer.js.map  promise-detail.js  promise-detail.js.map  promise-for-agent-pub-key.js  promise-for-agent-pub-key.js.map  promise-for-offer.js  promise-for-offer.js.map  promise.js.map
ui/src/: holochain-app.ts
ui/src/assemble/assemble/: all-offers.ts  commitment-detail.ts  commitment-for-offer.ts  commitment.ts  create-commitment.ts  create-fulfillment.ts  create-offer.ts  create-promise.ts  fulfillment-detail.ts  fulfillment-for-commitment.ts  fulfillment-for-promise.ts  fulfillment.ts  my-promises.ts  offer-detail.ts  offer.ts  (+4 more)
workdir/: happ.yaml  web-happ.yaml
(+15 files in other folders)
