[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.1"
hdk = "0.0.157"
serde = "1"

[workspace.dependencies.assemble]
path = "dnas/assemble/zomes/coordinator/assemble"

[workspace.dependencies.assemble_integrity]
path = "dnas/assemble/zomes/integrity/assemble_integrity"
